--- a/css/boilerplate.css
+++ b/css/boilerplate.css
@@ -501,3 +501,11 @@ table,tr,td, .sheet img{
 .sheet. table .status-table{
 	vertical-align:top;
 }
+.sheet .perk-table td{
+	padding:5px;
+}
+.sheet .perk-div {
+background:black;
+padding:5px;
+width:100%;
+}
