Perk Updates / Range Calculations

--- a/templates/actor/parts/actor-items.hbs
+++ b/templates/actor/parts/actor-items.hbs
@@ -67,14 +67,13 @@
 		</tr>
 		</table>
 	<table class="equipped-stats">
-	<tr><td colspan=999>RANGE TABLE</td></tr>
-	<tr><td>Short</td><td>Medium</td><td>Long</td></tr>
+	<tr><td colspan=999>RANGE</td></tr>
 	<tr>
-	
-	
-	<td id="{{system.id.value}}">{{system.rangedshort.value}} x PER</td>
-	<td id="ranged-medium">{{system.rangedmedium.value}} x PER</td>
-	<td id="ranged-long">>10 x PER</td>
+	<td>0 - {{system.shortrangedcalc1.value}}ft</td>
+	<td id="range">{{system.shortrangedcalc.value}}ft - {{system.longrangedcalc.value}}ft</td>
+	<td>> {{system.longrangedcalc1.value}}ft</td>
+	</tr>
+	<tr><td>Advantage</td><td>Normal</td><td>Disadvantage</td>
 	</tr>		
 	</table>
 	<div class='item-controls'>
