--- a/templates/actor/parts/actor-perks.hbs
+++ b/templates/actor/parts/actor-perks.hbs
@@ -4,9 +4,9 @@
   
     <li class='item flexrow' data-item-id='{{item._id}}'>
     <table class="perk-table" style="border:solid 1px;">
-	<tr><td><h3>{{item.name}}</h3>
+	<tr><td><h3>{{item.name}} </h3>
 	<div class="perk-div"><img class="perk-image" src="{{item.img}}" /></div>
-	
+	Qty: {{system.perk-level.value}}
 	</td></tr>
 	<tr><td style="height:150px;">{{{item.system.description}}}
 </td></tr>
