--- a/templates/actor/actor-character-sheet.hbs
+++ b/templates/actor/actor-character-sheet.hbs
@@ -55,10 +55,10 @@ document.getElementById("healing-rate").value = Math.floor(({{system.level.value
 				<td colspan=2 class="statusnum"><input type="number" name="system.stamina.value" value="{{system.stamina.value}}" max="{{system.staminamax.value}}"/> / <input type="number" name="system.staminamax.value" value="{{system.staminamax.value}}" /></td>
 			</tr>
 			<tr>
-				<td colspan=2><span class="status-label">AP</span><progress style="width:90%;float:right;" class="statusbar stamina" value="{{system.abilitypoints.value}}" max="{{system.abilitypointsmax.value}}"> {{system.abilitypoints.value}} </progress></td>
+				<td colspan=2><span class="status-label">AP</span><progress style="width:90%;float:right;" class="statusbar stamina" value="{{system.actionpoints.value}}" max="{{system.actionpointsmax.value}}"> {{system.actionpoints.value}} </progress></td>
 			</tr>
 			<tr>
-				<td colspan=2 class="statusnum"><input type="number" name="system.abilitypoints.value" value="{{system.abilitypoints.value}}" max="{{system.abilitypointsmax.value}}"/> / <input type="number" name="system.abilitypointsmax.value" value="{{system.abilitypointsmax.value}}" /></td>
+				<td colspan=2 class="statusnum"><input type="number" name="system.actionpoints.value" value="{{system.actionpoints.value}}" max="{{system.actionpointsmax.value}}"/> / <input type="number" name="system.actionpointsmax.value" value="{{system.actionpointsmax.value}}" /></td>
 			</tr>
 		<tr>
 			<td><input id="armor-class-form" type="number" name="system.armor-class.value" value="{{system.armor-class.value}}">AC</td><td><input id="damage-threshold-form" type="number" name="system.damage-threshold.value" value="{{system.damage-threshold.value}}">DT</td>
