--- a/templates/item/item-food-drink-sheet.hbs
+++ b/templates/item/item-food-drink-sheet.hbs
@@ -6,10 +6,11 @@
     </div>
   </header>
 <table style="width:200px;">
-<tr><td>Cost</td><td>Load</td></tr>
+<tr><td>Cost</td><td>Load</td><td>Qty</td></tr>
 <tr>
 <td><input type="number" name="system.cost.value" value="{{system.cost.value}}" /></td>
 <td><input type="number" name="system.load.value" value="{{system.load.value}}" /></td>
+<td><input type="number" name="system.itemQty.value" value="{{system.itemQty.value}}" /></td>
 </tr>
 </table>
 
