--- a/templates/actor/parts/actor-items.hbs
+++ b/templates/actor/parts/actor-items.hbs
@@ -16,7 +16,7 @@
 
 {{#each actor.items as |item id|}}
     <li style="float:left;" class='item flexrow' data-item-id='{{item._id}}'>
-	<a class='item-control item-edit'>{{item.name}} </a>,	
+	<a class='item-control item-d'>{{item.name}} </a>,	
   {{/each}}
    
 	</td>
