--- a/templates/item/item-ammo-sheet.hbs
+++ b/templates/item/item-ammo-sheet.hbs
@@ -20,7 +20,7 @@
             <td>Ammo Type</td>
         </tr>
         <tr>
-            <td><input type="number" name="system.cost.value" value="{{system.cost.value}}" /></td>
+            <td><input type="number" name="system.base-cost.value" value="{{system.base-cost.value}}" /></td>
             <td><input type="number" name="system.load.value" value="{{system.load.value}}" /></td>
             <td><input type="number" name="system.quantity.value" value="{{system.quantity.value}}" /></td>
             <td>
