--- a/templates/item/item-meleeweapon-sheet.hbs
+++ b/templates/item/item-meleeweapon-sheet.hbs
@@ -15,7 +15,7 @@
 	<table>
 	<tr><td>Cost</td><td>AP</td><td>Damage</td><td>Crit</td><td>Crit Dmg</td><td>Load</td><td>Str Req.</td></tr>	
 	<tr>
-	<td><input type="number" name="system.cost.value" value="{{system.cost.value}}" /></td>
+	<td><input type="number" name="system.base-cost.value" value="{{system.base-cost.value}}" /></td>
 	<td><input type="number" name="system.AP.value" value="{{system.AP.value}}" /></td>
 	<td><input type="text" name="system.damage.value" value="{{system.damage.value}}" /></td>
 	<td><input type="text" name="system.critical.value" value="{{system.critical.value}}" /></td>
