--- a/templates/item/item-item-sheet.hbs
+++ b/templates/item/item-item-sheet.hbs
@@ -6,7 +6,7 @@
       <div class="grid grid-2col">
         <div class="resource">
           <label class="resource-label">Quantity</label>
-          <input type="text" name="system.quantity" value="{{system.quantity}}" data-dtype="Number" />
+          <input type="text" name="system.qty" value="{{system.qty}}" data-dtype="Number" />
         </div>
         <div class="resource">
           <label class="resource-label">Weight</label>
