--- a/css/falloutzero.css
+++ b/css/falloutzero.css
@@ -206,11 +206,11 @@
   text-align: center;
 }
 
-/* Styles limited to boilerplate sheets */
-.boilerplate .item-form {
+/* Styles limited to falloutzero sheets */
+.falloutzero .item-form {
   font-family: "Roboto", sans-serif;
 }
-.boilerplate .sheet-header {
+.falloutzero .sheet-header {
   flex: 0 auto;
   overflow: hidden;
   display: flex;
@@ -219,43 +219,43 @@
   justify-content: flex-start;
   margin-bottom: 10px;
 }
-.boilerplate .sheet-header .profile-img {
+.falloutzero .sheet-header .profile-img {
   flex: 0 0 100px;
   height: 100px;
   margin-right: 10px;
 }
-.boilerplate .sheet-header .header-fields {
+.falloutzero .sheet-header .header-fields {
   flex: 1;
 }
-.boilerplate .sheet-header h1.charname {
+.falloutzero .sheet-header h1.charname {
   height: 50px;
   padding: 0px;
   margin: 5px 0;
   border-bottom: 0;
 }
-.boilerplate .sheet-header h1.charname input {
+.falloutzero .sheet-header h1.charname input {
   width: 100%;
   height: 100%;
   margin: 0;
 }
-.boilerplate .sheet-tabs {
+.falloutzero .sheet-tabs {
   flex: 0;
 }
-.boilerplate .sheet-body,
-.boilerplate .sheet-body .tab,
-.boilerplate .sheet-body .tab .editor {
+.falloutzero .sheet-body,
+.falloutzero .sheet-body .tab,
+.falloutzero .sheet-body .tab .editor {
   height: 100%;
 }
-.boilerplate .tox .tox-editor-container {
+.falloutzero .tox .tox-editor-container {
   background: #fff;
 }
-.boilerplate .tox .tox-edit-area {
+.falloutzero .tox .tox-edit-area {
   padding: 0 8px;
 }
-.boilerplate .resource-label {
+.falloutzero .resource-label {
   font-weight: bold;
 }
-.boilerplate .items-header {
+.falloutzero .items-header {
   height: 28px;
   margin: 2px 0;
   padding: 0;
@@ -264,17 +264,17 @@
   border: 2px groove #eeede0;
   font-weight: bold;
 }
-.boilerplate .items-header > * {
+.falloutzero .items-header > * {
   font-size: 14px;
   text-align: center;
 }
-.boilerplate .items-header .item-name {
+.falloutzero .items-header .item-name {
   font-weight: bold;
   padding-left: 5px;
   text-align: left;
   display: flex;
 }
-.boilerplate .items-list {
+.falloutzero .items-list {
   list-style: none;
   margin: 0;
   padding: 0;
@@ -282,12 +282,12 @@
   scrollbar-width: thin;
   color: #444;
 }
-.boilerplate .items-list .item-list {
+.falloutzero .items-list .item-list {
   list-style: none;
   margin: 0;
   padding: 0;
 }
-.boilerplate .items-list .item-name {
+.falloutzero .items-list .item-name {
   flex: 2;
   margin: 0;
   overflow: hidden;
@@ -296,46 +296,46 @@
   align-items: center;
   display: flex;
 }
-.boilerplate .items-list .item-name h3, .boilerplate .items-list .item-name h4 {
+.falloutzero .items-list .item-name h3, .falloutzero .items-list .item-name h4 {
   margin: 0;
   white-space: nowrap;
   overflow-x: hidden;
 }
-.boilerplate .items-list .item-controls {
+.falloutzero .items-list .item-controls {
   display: flex;
   flex: 0 0 100px;
   justify-content: flex-end;
 }
-.boilerplate .items-list .item-controls a {
+.falloutzero .items-list .item-controls a {
   font-size: 12px;
   text-align: center;
   margin: 0 6px;
 }
-.boilerplate .items-list .item {
+.falloutzero .items-list .item {
   align-items: center;
   padding: 0 2px;
   border-bottom: 1px solid #c9c7b8;
 }
-.boilerplate .items-list .item:last-child {
+.falloutzero .items-list .item:last-child {
   border-bottom: none;
 }
-.boilerplate .items-list .item .item-name {
+.falloutzero .items-list .item .item-name {
   color: #191813;
 }
-.boilerplate .items-list .item .item-name .item-image {
+.falloutzero .items-list .item .item-name .item-image {
   flex: 0 0 30px;
   height: 30px;
   background-size: 30px;
   border: none;
   margin-right: 5px;
 }
-.boilerplate .items-list .item-prop {
+.falloutzero .items-list .item-prop {
   text-align: center;
   border-left: 1px solid #c9c7b8;
   border-right: 1px solid #c9c7b8;
   font-size: 12px;
 }
-.boilerplate .items-list .items-header {
+.falloutzero .items-list .items-header {
   height: 28px;
   margin: 2px 0;
   padding: 0;
@@ -344,27 +344,27 @@
   border: 2px groove #eeede0;
   font-weight: bold;
 }
-.boilerplate .items-list .items-header > * {
+.falloutzero .items-list .items-header > * {
   font-size: 12px;
   text-align: center;
 }
-.boilerplate .items-list .items-header .item-name {
+.falloutzero .items-list .items-header .item-name {
   padding-left: 5px;
   text-align: left;
 }
-.boilerplate .item-formula {
+.falloutzero .item-formula {
   flex: 0 0 200px;
   padding: 0 8px;
 }
-.boilerplate .effects .item .effect-source,
-.boilerplate .effects .item .effect-duration,
-.boilerplate .effects .item .effect-controls {
+.falloutzero .effects .item .effect-source,
+.falloutzero .effects .item .effect-duration,
+.falloutzero .effects .item .effect-controls {
   text-align: center;
   border-left: 1px solid #c9c7b8;
   border-right: 1px solid #c9c7b8;
   font-size: 12px;
 }
-.boilerplate .effects .item .effect-controls {
+.falloutzero .effects .item .effect-controls {
   border: none;
 }
 .window-app .window-content, 
@@ -395,7 +395,7 @@
 .character input,
 .sheet h1,.sheet h2,.sheet h3,
 .sheet a,.sheet a:hover,.sheet li,
-.boilerplate .items-list .item .item-name{
+.falloutzero .items-list .item .item-name{
 	color:#01E998;
 }
 
